== Git

* Add --webcvs to rdoc_options in generated gemspec.
* Move erb templates from lib to datadir.
* Generate a top-level project module.
* Move generated VERSION constant out of foo/version.rb, into foo.rb
* The shoe generator accepts an --application option to generate an executable stub.
* Shoe::Tasks may no longer be built with a Gem::Specification object; pass the path to a gemspec file instead.

== 0.5.1 -- 2010 April 7

* Include summary in description.

== 0.5.0 -- 2010 April 7

* Lean on cucumber.yml to define cucumber tasks.
* Lean on spec.test_files and Gem::Validator to run tests.
* Shoe::Tasks can now be used a la carte.
* The shoe generator script now requires a path argument.

== 0.4.0 -- 2010 April 6

* Don't generate the gemspec; *use* it instead.

== 0.3.0 and before

(I need to spelunk through `git log` to be coherent here.)